исправил у свг модал белый зазор

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
           <label class="user-agree-policy" for="user-policy">
             <span class="check-wrap">
               <svg class="icon-agree">
-                <use href="./images/icons.svg#icon-agree"></use>
+                <use href="./images/icons.svg#icon-agree-bg"></use>
               </svg>
             </span>
             Соглашаюсь с рассылкой и принимаю
