--- a/index.html
+++ b/index.html
@@ -481,7 +481,6 @@
         </div>
 
         <div class="right-block">
-          <div class="footer-right-side">
             <p class="footer-subscribe-text">Подпишитесь на рассылку</p>
             <form class="footer-subscribe-form">
               <input
@@ -497,7 +496,6 @@
                 </svg>
               </button>
             </form>
-          </div>
         </div>
       </div>
     </footer>
@@ -505,7 +503,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p class="modal-text-title">Оставьте свои данные, мы вам перезвоним</p>
-        <form name="modal-form-request">
+        <form>
           <label class="modal-label">Имя</label>
           <span class="user-name-thumb">
             <input class="modal-input" type="text" name="user-name" />
